--- a/Photify_alpha/res/layout/item.xml
+++ b/Photify_alpha/res/layout/item.xml
@@ -4,7 +4,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical"
-	android:layout_margin="4dp"
+	android:layout_margin="4px"
 	android:background="@drawable/rounded">
 
 	<ac.jejunu.photify.view.UrlImageView
