이미지 로딩중 미리 기본 색상을(서버에서 계산한 이미지의 평균 색상) 보여주는 기능 구현 완료 -

--- a/Photify_alpha/res/layout/fragment_masonry.xml
+++ b/Photify_alpha/res/layout/fragment_masonry.xml
@@ -5,6 +5,6 @@
 	android:layout_height="match_parent"
 	android:orientation="vertical"
 	android:id="@+id/scroll_container"
-	android:background="#dedfd4">
+	android:background="#d3d3d3">
 
 </LinearLayout>
