--- a/Photify_alpha/res/layout/profile_and_text.xml
+++ b/Photify_alpha/res/layout/profile_and_text.xml
@@ -1,32 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-	android:orientation="horizontal">
-	<!--profile pic-->
-	<ac.jejunu.photify.view.UrlImageView
-		android:layout_width="48dp"
-		android:layout_height="48dp"
-		android:layout_gravity="center_vertical"
-		android:layout_marginRight="2dp"
-		android:scaleType="fitXY"
-		android:id="@+id/iv_profilepic"/>
-	<!---->
-	<LinearLayout
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:orientation="vertical"
-		android:layout_marginBottom="10dp">
-		<TextView android:layout_width="wrap_content"
-		          android:layout_height="wrap_content"
-		          android:id="@+id/tv_name"
-		          android:text="TEST NAME"/>
-		<TextView android:layout_width="wrap_content"
-		          android:layout_height="wrap_content"
-		          android:id="@+id/tv_contents"
-		          android:text="TEST CONTENT"/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal" >
 
-	</LinearLayout>
+    <!-- profile pic -->
+
+    <ac.jejunu.photify.view.UrlImageView
+        android:id="@+id/iv_profilepic"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginRight="2dp"
+        android:scaleType="fitXY" />
+    <!--  -->
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:text="TEST NAME" />
+
+        <TextView
+            android:id="@+id/tv_contents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TEST CONTENT" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="horizontal" >
+        <!-- like icon -->
+        <!-- like cnt-->
+        <!-- comment icon-->
+        <!-- comment cnt-->
+    </LinearLayout>
 
 </LinearLayout>
