맵에 URL로 동적으로 사진 받아와서 마커로 뿌리기 기능 구현 완료.. 일단 샘플 URL몇개에서 가져와서 뿌림. 코드가 너무 복잡함. 쓸데 없는 코드도 많음.
이제 서버에서 받아다가 뿌려야함.

--- a/Photify_alpha/res/layout/mainbutton_overlay.xml
+++ b/Photify_alpha/res/layout/mainbutton_overlay.xml
@@ -11,11 +11,12 @@
     tools:context="ac.jejunu.photify.activity.MainActivity$PlaceholderFragment" >
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btn_post_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="Button" />
+        android:background="@drawable/edit"
+        android:minWidth="48dp" />
 
 </LinearLayout>
