글 작성 엑티비티 구현 완료 - 마커 찍은 좌효로 사진 포스팅 기능 구현 완료. (글 작성에 있는 지도 버튼에 현재 찍은 마커로 위치가 표시되도록 해야함) 구글맵 다른 프래그먼트 이동했다가 다시 왔을때 안되던 문제 해결 로그인후, 유저 엑세스 토큰 프리퍼런스에 저장함 - 암호화? 해야할듯? 서버에 보낼때도 위험함. 엑세스 토큰가지고 업로드 하는 기능 구현 완료 - 페북에 로그인된 사용자로 업로드됨.
이제 코드 좀 깔끔하게 해보고, 디자인 적용하고, 상세화면 구현, 리스트 가져올때 느린것 해결하고, 맵에 주변 사진 뿌릴때 최적화 부분 필요.

--- a/Photify_alpha/res/layout/photo_input.xml
+++ b/Photify_alpha/res/layout/photo_input.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical" >
 
         <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
@@ -21,24 +22,65 @@
             android:focusable="true"
             android:focusableInTouchMode="true" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Photo"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <ImageButton
             android:id="@+id/imageButton1"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:src="@drawable/com_facebook_button_check_on" />
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:adjustViewBounds="true"
+            android:background="#00000000"
+            android:scaleType="fitCenter"
+            android:src="@drawable/open_photo" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Descrption"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <EditText
             android:id="@+id/editText1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:selectAllOnFocus="false" />
+            android:layout_marginBottom="20dp"
+            android:ems="10" />
 
-        <fragment
-            android:id="@+id/map"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Location"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="401dp"
-            class="com.google.android.gms.maps.SupportMapFragment" />
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp" >
+
+            <fragment
+                android:id="@+id/map"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                class="com.google.android.gms.maps.SupportMapFragment" />
+
+            <Button
+                android:id="@+id/mapBtn"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#44000000"
+                android:text="Set location" />
+        </FrameLayout>
+
+        <Button
+            android:id="@+id/submit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="글등록하기" />
     </LinearLayout>
 
 </ScrollView>
