--- a/trunk/Photify_alpha/res/layout/activity_photo_input.xml
+++ b/trunk/Photify_alpha/res/layout/activity_photo_input.xml
@@ -45,7 +45,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/et_contents"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
