상세보기 화면 구현중 - 이미지, 댓글 불러오기만 완료. 댓글 작성, 이미지 사이즈 클때 OOM 에러 아직 못고침 지도 클릭시 지도 엑티비티 다시 띄워주면서 마커 올리기..... 풀 투 리프레시 체크 리스트 댓글 작성, 좋아요, 체크 박스 - 체크 리스트를 위한 글 작성시 사진 회전 노티 - 위치 알림 디좌인

--- a/Photify_alpha/res/layout/fragment_facebook_login.xml
+++ b/Photify_alpha/res/layout/fragment_facebook_login.xml
@@ -1,38 +1,37 @@
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:background="@drawable/app_background"
+    android:orientation="horizontal" >
 
-	<com.facebook.widget.LoginButton
-		android:id="@+id/authButton"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center_horizontal"
-		android:layout_marginTop="30dp"
-		/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="25dp"
+        android:orientation="vertical" >
 
-	<Button
-		android:id="@+id/shareButton"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:textStyle="bold"
-		android:gravity="center"
-		android:layout_marginTop="30dp"
-		android:visibility="invisible"
-		android:text="share"
-		/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/maps2" />
 
-	<Button
-		android:id="@+id/sendRequestButton"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:textStyle="bold"
-		android:gravity="center"
-		android:layout_marginTop="30dp"
-		android:visibility="invisible"
-		android:text="send_request"
-		/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="75dp"
+            android:layout_marginBottom="30dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/title1" />
+
+        <com.facebook.widget.LoginButton
+            android:id="@+id/authButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp" />
+    </LinearLayout>
 
 </LinearLayout>
