--- a/Photify_alpha/res/layout/activity_detailed.xml
+++ b/Photify_alpha/res/layout/activity_detailed.xml
@@ -13,154 +13,39 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
-        <ImageView
-            android:id="@+id/imageButton1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/add" />
+        <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="4dp" >
+            android:layout_width="0px"
+            android:layout_height="0px"
+            android:focusable="true"
+            android:focusableInTouchMode="true" />
 
-            <ac.jejunu.photify.view.UrlImageView
-                android:id="@+id/iv_profilepic"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="4dp"
-                android:scaleType="fitXY" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="2dp"
-                    android:text="TEST NAME"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tv_contents"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:text="TEST CONTENT ABCDEFG"
-                    android:textSize="13dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:gravity="right"
-                android:orientation="horizontal" >
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginLeft="3dp"
-                    android:gravity="right"
-                    android:orientation="vertical" >
-
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal" >
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/like" />
-
-                        <TextView
-                            android:id="@+id/tv_like_count"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="2dp"
-                            android:text="000"
-                            android:textSize="10dp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal" >
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/comment" />
-
-                        <TextView
-                            android:id="@+id/tv_comment_count"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="2dp"
-                            android:text="000"
-                            android:textSize="10dp" />
-                    </LinearLayout>
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
-
-        <fragment
-            android:id="@+id/map2"
+        <ac.jejunu.photify.view.UrlImageView
+            android:id="@+id/iv_main_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:background="#00000000"
+            android:scaleType="fitCenter" />
+
+        <include
+            android:id="@+id/writer_profile"
+            layout="@layout/profile_and_text" >
+        </include>
+
+        <fragment
+            android:id="@+id/map_detailed"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
             class="com.google.android.gms.maps.SupportMapFragment" />
 
         <LinearLayout
+            android:id="@+id/comments_container"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:padding="4dp" >
-
-            <ac.jejunu.photify.view.UrlImageView
-                android:id="@+id/UrlImageView01"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="4dp"
-                android:scaleType="fitXY" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/TextView02"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="2dp"
-                    android:text="TEST NAME"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/TextView03"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:text="TEST CONTENT ABCDEFG"
-                    android:textSize="13dp" />
-            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -170,11 +55,10 @@
             android:padding="4dp" >
 
             <ac.jejunu.photify.view.UrlImageView
-                android:id="@+id/UrlImageView02"
+                android:id="@+id/user_profile_image"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center_vertical"
-               
                 android:layout_marginRight="4dp"
                 android:scaleType="fitXY" />
 
@@ -184,7 +68,7 @@
                 android:orientation="vertical" >
 
                 <TextView
-                    android:id="@+id/TextView01"
+                    android:id="@+id/tv_user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
@@ -192,21 +76,18 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/editText1"
+                    android:id="@+id/et_comment_contents"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="8" />
-
             </LinearLayout>
 
             <Button
-                android:id="@+id/button1"
+                android:id="@+id/btn_submit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="입력" />
-
         </LinearLayout>
-
     </LinearLayout>
 
 </ScrollView>
