--- a/Photify_alpha/res/layout/activity_photo_input.xml
+++ b/Photify_alpha/res/layout/activity_photo_input.xml
@@ -32,10 +32,10 @@
             android:id="@+id/imageButton1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:adjustViewBounds="true"
-            android:background="#00000000"
             android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:layout_marginBottom="20dp"
+            android:background="#00000000"
             android:src="@drawable/open_photo" />
 
         <TextView
@@ -59,13 +59,13 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:layout_marginBottom="20dp" >
 
             <fragment
                 android:id="@+id/map"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 class="com.google.android.gms.maps.SupportMapFragment" />
 
             <Button
