--- a/Photify_alpha/res/layout/mainbutton_overlay.xml
+++ b/Photify_alpha/res/layout/mainbutton_overlay.xml
@@ -12,11 +12,13 @@
 
     <Button
         android:id="@+id/btn_post_photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="48dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:background="@drawable/edit"
-        android:minWidth="48dp" />
+        android:adjustViewBounds="true"
+        android:background="@drawable/location_pointer"
+        android:scaleType="fitCenter"
+        android:maxWidth="50dp" />
 
 </LinearLayout>
